[tool.poetry]
name = "ifoam"
packages = [{ include = "foam" }]
version = "0.11.2"
description = "Python Interface to OpenFOAM (Configured Using YAML)"
authors = ["Iydon Liang <liangiydon@gmail.com>"]
keywords = ["OpenFOAM", "YAML"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/iydon/of.yaml"
repository = "https://github.com/iydon/of.yaml"
include = ["LICENSE.txt"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.7"
PyYAML = "^6.0"
py7zr = { version = "^0.17.2", optional = true }
click = { version = "^8.0.3", optional = true }
tqdm = { version = "^4.63.1", optional = true }
vtk = { version = "^9.1.0", optional = true }

# https://github.com/python-poetry/poetry/issues/2567
[tool.poetry.extras]
7z = ["py7zr"]
cli = ["click"]
tqdm = ["tqdm"]
vtk = ["vtk"]
full = ["py7zr", "click", "tqdm", "vtk"]

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.2.9"
mkdocs-static-i18n = "^0.45"
pygments = "^2.12.0"
python-docx = "^0.8.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
